--- a/範例（基礎）.md
+++ b/範例（基礎）.md
@@ -72,7 +72,10 @@ http {
         listen 80;
         server_name test1.service.com;
         location ~ /t1 {
-            proxy_pass http://server_1;
+            ##  下面的 $1 爆幹重要。
+            ##  如果不加，上面 location 的 /t1 會跟著跑去 server_1 的路徑後面。
+            ##  最後會因為你的 8081 或 8082 端口下面沒有這個路徑，返回 404 。
+            proxy_pass http://server_1/$1;
         }
     }
 }
