--- a/範例（基礎）.md
+++ b/範例（基礎）.md
@@ -49,9 +49,9 @@ http {
 }
 ```
 
-###### 支線任務
+###### 問題三
 
-接下來行銷端會開始推廣活動、提高用戶數量等等，這時候從問題一你會發現兩個服務（8081與8082）以及 Nginx 服務都在同一台伺服器上。接著你開始會很害怕一件事情，如果伺服器掛了，那你全部都掛了。所以你會開始分散風險，你可能會將這三個服務分別放在不同的伺服器上，所以你可能會將配置變成下面清單的形式。
+接下來行銷端會開始推廣活動、提高用戶數量等等，這時候你會有些空檔。但你會發現目前兩個服務（8081與8082）以及 Nginx 服務都在同一台伺服器上，如果你是一個好的工程師，你會開始擔心如果這台伺服器掛了，服務一與服務二就會掛。因此，為了分散風險，現在有一個需求，你可能會將這三個服務分別放在不同的伺服器上，所以你可能會將配置變成下面清單的形式。
 
 - 服務 Nginx （18.123.21.17）且使用 80 端口
 
